fix scrollbar issue

--- a/app/src/views/trans-window/trans-window.less
+++ b/app/src/views/trans-window/trans-window.less
@@ -12,3 +12,6 @@
     margin: auto;
   }
 }
+.app-container {
+  overflow-y: hidden !important;
+}
